--- a/WayPointBasedlndoorNavigationTests/Info.plist
+++ b/WayPointBasedlndoorNavigationTests/Info.plist
@@ -18,5 +18,7 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Play with BLE Compatible devices</string>
 </dict>
 </plist>
